# webrtc-lan

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/README/: ClientServer.drawio  ServerOnWebRTC.drawio  WebRTC-simplified.drawio
src/: chatroom.rs  chatsession.rs  main.rs  packets.rs  usersession.rs  util.rs  webrtcpeer.rs  webrtcsignalling.rs  webserver.rs
web/: PostConnection.js  index.html  main.js
webclient/: package.json  pnpm-lock.yaml
webclient/src/: 404.html  index.html  index.ts  packets.ts  secret.html  secret.ts  webrtc.ts
