[package]
name = "webrtc_native_receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.5"
# async-std = {version = "1.13.0", features = ["attributes"]}
bytes = "1.7.2"
futures = "0.3.30"
just-webrtc = "0.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
tower-http = { version = "0.6.0", features = ["fs"] }
# webrtc-unreliable = "0.6.0"
