[package]
name = "webrtc_native_receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"          # Logging
colog = "1.3.0"         # Logging backend for Win/Mac/Linux - console
tokio = {version = "1.40.0", features = ["signal"]} # Async Runtime (must use tokio as per webrtc-rs and axum)
futures = "0.3.30"      # Async Util
axum = "0.7.7"          # Web server
rust-embed-for-web = "11.2.1" # Bundle static assets in release, serve dir in debug
mime_guess = "2.0.5"    # For static resource serving
serde = "1.0.210"       # Serialisation library
serde_json = "1.0.128"  # JSON for http/connect
just-webrtc = "0.2"     # WebRTC communications

bytes = "1.7.2"         # Util (networking)
derive-new = "0.7.0"    # Util (macro)
lazy_static = "1.5.0"   # Util (macro)
local-ip-address = "0.6.3"
# rust-embed = "8.5.0"

# anyhow = "1.0.89"
# webrtc-unreliable = "0.6.0"
